NativeBOINC: fixed client startup and added 'network communication' on tablet widget.

--- a/src/NativeBOINC/res/raw/changelog.txt
+++ b/src/NativeBOINC/res/raw/changelog.txt
@@ -1,3 +1,7 @@
+Version 0.4.1.2 (beta) (2012-11-22):
+- fixed client startup
+- added 'network communication' button in tablet widget  
+
 Version 0.4.1.1 (beta) (2012-11-03):
 - added selection client version before installation (if you have problems with 0.5.9x)
 
