--- a/src/NativeBOINC/res/raw/changelog.txt
+++ b/src/NativeBOINC/res/raw/changelog.txt
@@ -1,3 +1,7 @@
+Version 0.4.1.4 (beta) (2012-12-24):
+- fixed empty access password handling
+- fixed error handling
+
 Version 0.4.1.3 (beta) (2012-12-05):
 - fixed the checking installation during mainscreen start up
 - fixed context menu on the project tab
