NativeBOINC: update version.

--- a/src/NativeBOINC/res/raw/changelog.txt
+++ b/src/NativeBOINC/res/raw/changelog.txt
@@ -1,3 +1,8 @@
+Version 0.4.2 (beta) (2013-01.23):
+- fixed localhost autorefresh policy
+- extended autorefresh options
+- added set GPU mode in 'Manage client' screen
+
 Version 0.4.1.4 (beta) (2012-12-24):
 - fixed empty access password handling
 - fixed error handling
@@ -53,103 +58,4 @@ Version 0.4 (beta) (2012-08-15)
 - added news features: News and Automatic update checks
 - fixed encoding at saving config files
 
-Version 0.3.9.9.3 (alpha) (2012-08-05)
-- fixed boinc xml parser (used during parsing gui rpc replies)
-
-Version 0.3.9.9.2 (alpha) (2012-07-21)
-- fixed wake lock acquiring/releasing for main activity
-
-Version 0.3.9.9.1 (alpha) (2012-06-25)
-- fixed autostart (currently made 3 trials)
-- added 'run always when plugged' option in localprefs
-
-Version 0.3.9.9 (alpha) (2012-06-24)
-- fixed NPE and crashes
-- fixed installations and error handling
-- improved activites with list
-- improved behaviour in first installation
-- new option: autostarts.
-- improved widget behaviour
-- improved wakelocking
-- lot of small fixes 
-
-Version 0.3.9.7.1 (alpha) (2012-06-18)
-- fixed db handling (added important escaping)
-- improving NativeClientActivity
-
-Version 0.3.9.7 (alpha) (2012-06-18)
-- fixed NullPointerException faults in the ClientBridge
-- removing finished progresses when progress activity starts
-- fixed notification actions
-- set up main activity as single task launched
-- improved tab views (you can select option by long click on empty place)
-
-Version 0.3.9.6.1 (alpha) (2012-06-17)
-- fixed long lines in the local preferences
-
-Version 0.3.9.6 (alpha) (2012-06-17)
-- fixed 'Text file busy' error on the first starting project app
-- added new message when client monitor fails. 
-
-Version 0.3.9.5 (alpha) (2012-06-14)
-- introduce new service output/error handling
-- fixed power management (lock screen)
-- fixed install options (update binaries)
-- fixed connection manager service (poll ops handling)
-- improved on pause error handling (on the activities)
-- improved manage client activity
-- improved notifications handling
-- updated Czech translations
-
-Version 0.3.9.3.3 (alpha) (2012-06-05)
-- fixed error handling (channels)
-- fixed automatic installation and BAM syncing
-- minor bugs
-
-Version 0.3.9.3.2 (alpha) (2012-06-04)
-- fixed error handling
-- improved native client activity
-- updated german translation
-
-Version 0.3.9.3.1 (alpha) (2012-06-03)
-- fixed bugs
-- fixed compatibility with older Android 2.2
-- minor improvements
-- fixed layouts,strings
-
-Version 0.3.9.3 (alpha) (2012-06-01)
-- fixed error handling
-- improved add project activity
-- improved boinc dumping (runs in separate thread)
-- remove deadlocks during preparing update sdcard activity
-- other minor changes
-
-Version 0.3.9.2.2 (alpha) (2012-05-17)
-- added German translation (thanks for Daniel Winzen)
-
-Version 0.3.9.2 (alpha) (2012-05-16)
-- added update projects from SDCARD, whose are not supported
-- fixed deadlock after unsuccesful project installation
-
-Version 0.3.9.1 (alpha) (2012-05-14)
-- fixed installation cancelling
-- fixed translations typo
-
-Version 0.3.9 (alpha) (2012-05-12)
-- added Czech translation (thanks for Haer and eLPeCKo from CNT)
-- fixed (directory deleting) (reinstall, dumping)
-- fixed reconnecting after restart
-
-Version 0.3.8.2 (alpha) (2012-05-09)
-- fixed refresh behavior on the tabs
-- fixed small Polish translations
-
-Version 0.3.8.1 (alpha) (2012-05-08)
-- added Polish translations
-
-Version 0.3.8 (alpha) (2012-04-21)
-- improved detecting native boinc client
-- added action after pressing enter on last field on the forms
-- improved time dialog on Time preferences
-- introduced Honeycomb theme in the screen locker
-- fixed layouts for tablets 
+more change descriptions at https://github.com/matszpk/native-boinc-for-android/.
