NativeBOINC: Fix for improper (in multithreading) event handling.

--- a/src/NativeBOINC/res/raw/changelog.txt
+++ b/src/NativeBOINC/res/raw/changelog.txt
@@ -1,3 +1,6 @@
+Version 0.4.2.2 (beta) (2013-01-31):
+- fix for improper event handling
+
 Version 0.4.2.1 (beta) (2013-01-24):
 - updated Germanish translations (Daniel Winzen)
 - fixed some 'bugs' in texts (Daniel Winzen)
