--- a/src/NativeBOINC/res/raw/changelog.txt
+++ b/src/NativeBOINC/res/raw/changelog.txt
@@ -1,3 +1,8 @@
+Version 0.4.2.2 (beta) (2013-02-02):
+- fixed 'Stop using BAM' option
+- enable fast scrolling in boinc project list
+- update Czech translations (thanks eLPeCKo from CNT)
+
 Version 0.4.2.2 (beta) (2013-01-31):
 - fix for improper event handling
 
