NativeBOINC: Update version.

--- a/src/NativeBOINC/res/raw/changelog.txt
+++ b/src/NativeBOINC/res/raw/changelog.txt
@@ -1,3 +1,8 @@
+Version 0.4.2.4 (beta) (2013-02-06):
+- fixed crash on the finishing BOINC reinstallation
+- added fast scroll for all tabs in main screen
+- updated Czech translations
+
 Version 0.4.2.3 (beta) (2013-02-02):
 - fixed 'Stop using BAM' option
 - enable fast scrolling in boinc project list
