NativeBOINC: added italian translations. fixed boinc logs activity (crash), fixed NPE at startup, fixed the first start of the client.

--- a/src/NativeBOINC/res/values-cs/strings.xml
+++ b/src/NativeBOINC/res/values-cs/strings.xml
@@ -137,6 +137,7 @@
       BOINC@Poland - za podporu.\n
       Haer a eLPeCKo (CNT) - český překlad.\n
       Daniel Winzen - německý překlad.\n
+      Paolo (bax) - italština překlad.\n
     </string>
 
 	<!-- Preferences -->
