--- a/src/NativeBOINC/res/values-de/strings.xml
+++ b/src/NativeBOINC/res/values-de/strings.xml
@@ -137,6 +137,7 @@
 		BOINC@Poland - für Unterstützung.\n
 		Haer und eLPeCKo (CNT) - tschechische Übersetzung.\n
 		Daniel Winzen - deutsche Übersetzung.\n
+		Paolo (bax) - italienisch Übersetzung.\n
 	</string>
 
 	<!-- Preferences -->
