--- a/src/NativeBOINC/res/values/strings.xml
+++ b/src/NativeBOINC/res/values/strings.xml
@@ -137,6 +137,7 @@
 		BOINC@Poland - for support.\n
 		Haer and eLPeCKo from CNT - czech translation.\n
 		Daniel Winzen - german translation.\n
+		Paolo (bax) - itialan translation.\n
 	</string>
 
 	<!-- Preferences -->
