--- a/src/NativeBOINC/res/values-pl/strings.xml
+++ b/src/NativeBOINC/res/values-pl/strings.xml
@@ -136,6 +136,7 @@
 		BOINC@Poland - for support.\n
 		Haer i eLPeCKo (CNT) - tłumaczenie na czeski.\n
 		Daniel Winzen - tłumaczenie na niemiecki.\n
+		Paolo (bax) - tłumaczenie na włoski.\n
 	</string>
 
 	<!-- Preferences -->
