--- a/src/NativeBOINC/res/raw/changelog.txt
+++ b/src/NativeBOINC/res/raw/changelog.txt
@@ -1,3 +1,10 @@
+Version 0.4.3 (beta) (2013-03-03):
+- added italian translations
+- fixed NPE at Boinc Logs Screen (when no logs)
+- fixed NPE at startup when files are broken
+- waiting longer for the first start
+- set max the working temperature by default (prevents overheating)
+
 Version 0.4.2.4.2 (beta) (2013-02-13):
 - fixed news activity crash (hot fix)
 
