--- a/src/NativeBOINC/res/raw/changelog.txt
+++ b/src/NativeBOINC/res/raw/changelog.txt
@@ -1,3 +1,6 @@
+Version 0.4.3.2.1 (beta) (2013-03-17):
+- revert libexecwrapper (doesnt work with theSkyNet POGS)
+
 Version 0.4.3.2 (beta) (2013-03-14):
 - added certificates for https access (World Community Grid)
 - fixed behaviour when a distriblist files was broken
