--- a/src/NativeBOINC/TODO.txt
+++ b/src/NativeBOINC/TODO.txt
@@ -3,7 +3,7 @@ PLANY WERSJI 0.4.4/0.4.5
 -----------------------------------------
 
 --- Poprawki
-  * poprawienie obsLugi widgeta gdy boinc zakończy pracę (ma być zawsze odświeżenie)
+  * poprawienie obsługi widgeta gdy boinc zakończy pracę (ma być zawsze odświeżenie)
   * gdy ściąganie pliku ma być odświeżanie widgeta (opcjonalne)
   * (trudna poprawka) poprawienie obsługi przerywania komunikacji podczas instalacji/ściągania
   * przepisanie installservice (????)
@@ -15,8 +15,8 @@ PLANY WERSJI 0.4.4/0.4.5
 --- Usprawnienia
   * wprowadzenie info o pobieraniu danych z mobilnego internetu (opcjonalnie)
   * podświetlanie nowych informacji w newsach
-  * kolorowanie logów w boinc logs
-  * filtrowanie logów w boinc logs
+  * kolorowanie logów w boinc logs (niemozliwe)
+  * filtrowanie logów w boinc logs (niemozliwe)
 --- Interfejs użytkownika (prawdobodobnie większość w wersji 0.4.5)
   * wprowadzenie nowego elementu w mainscreen: sidebar/downbar
     * z listą szybkich opcji
@@ -35,6 +35,12 @@ Klient:
 * poprawic wychodzenie z programu (czasami jest zbyt powolne)
 * zbadać dlaczego projekty znikają po aktualizacjach
 * dodac mechanizm pobierania danych o baterii z innego programu
+* poprawić pobieranie info o zasobach aplikacji (ilosc wykorzystanej pamieci i itd) na
+  różnych urządzeniach
+
+BOINC API:
+* poprawić SEGFAULT przy wychodzeniu z aplikacji (sprawdz dokładnie)
+*
 
 ................................
 
